# Aegis-sentinel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aegis/common/: logger.py  schemas.py
aegis/core/: engine.py  flow_table.py  interceptor.py
aegis/modules/: policy_engine.py  threat_intel.py
scripts/: nftables.conf  setup_gateway.sh
